# agentyodha

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  agentyodha.yaml  fastagent.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
agentyodha/: __init__.py  agent.py  agent_security.py  cli.py  config.py  guardrails.py  http_tools.py  memory.py  playground.py  security.py  testing.py
agentyodha/providers/: __init__.py  anthropic_provider.py  openai_compat.py
docs/: RUNBOOK.md
examples/: quickstart.py  tools.py
fastagent/: __init__.py  agent.py  agent_security.py  cli.py  config.py  guardrails.py  http_tools.py  memory.py  playground.py  security.py  testing.py  tools.py
fastagent/providers/: __init__.py  anthropic_provider.py  base.py  openai_compat.py
tests/: test_smoke.py
