[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# agentyodha — "yodha" is Sanskrit for warrior. Distribution and import name match.
name = "agentyodha"
version = "0.1.0"
description = "A lightweight, configuration-first framework for building, testing, and securing LLM-powered agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tarun Vangari", email = "tarun.vangari@gmail.com" }]
requires-python = ">=3.10"
keywords = ["llm", "agents", "ai", "anthropic", "claude", "openai-compatible", "framework", "guardrails", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.90.0",
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/SmartTarun/agentyodha"
Repository = "https://github.com/SmartTarun/agentyodha"
Issues = "https://github.com/SmartTarun/agentyodha/issues"
Changelog = "https://github.com/SmartTarun/agentyodha/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agentyodha = "agentyodha.cli:main"

[tool.setuptools.packages.find]
include = ["agentyodha*"]

[tool.setuptools.package-data]
agentyodha = ["py.typed"]
